osafw-app/wwwroot/assets/css/site.css
:root,
[data-bs-theme=light]{
  /*--fw-body-bg: #f5f5f5;*/
  --fw-body-bg: #fff;
  --fw-pane-bg: var(--bs-tertiary-bg);
  --fw-spacer: 1rem;
  --fw-spacer05: calc(var(--fw-spacer)*0.5);
  --fw-hiliter: #ffffcc;
  --fw-table-row-font-size: 0.9rem;
  --fw-sidebar-width: 260px;
  --fw-btn-default-color: var(--bs-emphasis-color);
  --fw-btn-default-bg: var(--bs-light);
  --fw-btn-default-border: var(--bs-light-border-subtle);
}

[data-bs-theme=dark] {
  --fw-body-bg: #1c1c1c;
  --fw-hiliter: #555522;
  /*--fw-pane-bg: var(--bs-tertiary-bg);*/
  --fw-btn-default-bg: var(--bs-light-bg-subtle);
  --fw-btn-default-border: var(--bs-light-border-subtle);
  /* for vue multiselect */
  --ms-bg: var(--bs-body-bg);
  --ms-dropdown-bg: var(--bs-body-bg);
  --ms-border-width: var(--bs-border-width);
  --ms-border-color: var(--bs-border-color);
  --ms-placeholder-color: var(--bs-secondary-color);
  --ms-dropdown-border-width:var(--bs-border-width);
  --ms-dropdown-border-color: var(--bs-border-color);
  --ms-option-bg-pointed: #52525E;
  --ms-option-color-pointed: var(--bs-body-color);
}

body {
 background-color: var(--fw-body-bg);
}

/*.nav-pills {
  --bs-nav-pills-link-active-color: #fff;
  --bs-nav-pills-link-active-bg: #0d6efd;
}
*/
.card {
  --bs-body-bg: var(--fw-pane-bg);
}

/****** fw utilities */
.w100 {
  width: 100px;
}
.nl2br {
  white-space: pre-wrap;
}

/****** fw elements */
/*default button appearance*/
.btn-default {
  background-color: var(--fw-btn-default-bg);
  border-color: var(--fw-btn-default-border);
  --bs-btn-color: var(--fw-btn-default-color);
}

  .btn-default:hover,
  .btn-default:focus,
  .btn-default:active,
  .btn-default.active,
  .open .dropdown-toggle.btn-default {
    background-color: var(--fw-btn-default-border);
    border-color: var(--fw-btn-default-border);
  }

  .btn-default:active,
  .btn-default.active,
  .open .dropdown-toggle.btn-default {
    background-image: none;
  }

a[disabled]
  cursor: default;{
  pointer-events: none;
  color: var(--bs-btn-disabled-color);
}

.btn-fileinput {
  overflow: hidden;
  position: relative;
}
  .btn-fileinput input {
    cursor: pointer;
    position: absolute;
    right: 0;
    top: 0;
    opacity: 0;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    min-width: 100%;
    min-height: 100%;
  }

.file-drop-area {
    border: 2px dashed #ccc;
    border-radius: 20px;
    position: relative;
    padding: 20px;
    text-align: center;
}
  .file-drop-area.highlight {
      background-color: var(--fw-hiliter);
      border-color: var(--bs-primary);
  }
  .file-drop-area .fake-btn {
      cursor: pointer;
  }

.badge-outline-secondary {
    color: #6c757d;
    background-color: transparent;
    background-image: none;
    border-color: #6c757d;
    border: 1px solid;
}

h1 .badge {
 font-size: 1.25rem;
 vertical-align: middle;
}

.fw-card {
/*  background-color: #fff;
  border-radius: 0.25rem;
  padding: 1rem 1rem 0.25rem 1rem;
  box-shadow: 0 0 35px 0 rgb(154 161 171 / 15%);
*/
}
  #FEdit.fw-card,
  #FView.fw-card,
  #FDel.fw-card,
  .fw-card[data-list-filter]
  {
/*    background-color: var(--fw-pane-bg);*/
    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    padding: var(--fw-spacer) var(--fw-spacer) 0 var(--fw-spacer);
/*    padding: 1rem 1rem 0.25rem 1rem;*/
    margin-bottom: var(--fw-spacer);
  }

/****** layout */
.sidebar {
  width: var(--fw-sidebar-width);
  padding: 0;
  color: #000;
}
@media (min-width: 768px) {
  .sidebar {
    position: sticky;
    top: 0;
    height: 100vh;
    z-index: 100;
  }
}

  .sidebar .nav-pills .nav-link.active {
    color: var(--bs-nav-pills-link-active-color) !important; /*fix active nav text color for light mode*/
  }
  .sidebar .nav-header {
    margin-left: -1rem;
    margin-right: -1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    font-weight: bold;
    margin-top: 0.5rem;
    margin-bottom: 0.25rem;
  }

main {
}
.site-footer {
}

.no-sidebar #sidebar {
  display: none !important;
}
  .no-sidebar .site-navbar {
    display: block !important;
  }
  .no-sidebar .site-navbar .navbar-toggler {
    display: block !important;
  }



/****** list screens */
.btn-std {
  margin-bottom: var(--fw-spacer);
}

.table-list-wrapper {
 position: relative;
}
  .table-list-hscroll-hint {
    position: absolute;
    top:0;
    left:0;
    font-size:small;
    display: none;
    opacity: 0.6;
  }
  .table-dense > .table-list-hscroll-hint {
    display: block;
  }

table.list {
}
  table.list > thead {
    background-color: var(--bs-secondary-bg);
    position: sticky;
    top: 0;
    z-index: 10;
  }
/*
    table.list > thead > tr:first-child th:first-child {
      border-top-left-radius: var(--bs-border-radius);
    }
    table.list > thead > tr:first-child th:last-child {
      border-top-right-radius: var(--bs-border-radius);
    }
*/
    table.list > thead > tr > th[data-sort] {
      cursor: pointer;
    }
    table.list > thead > tr > th[data-sort].active-sort{
      background-color: var(--fw-hiliter) !important;
      white-space: nowrap;
    }
  table.list .search {
    display: none;
  }
  table.list tbody td {
    font-size: var(--fw-table-row-font-size);
  }
  table.list tbody a {
    text-decoration: none;
  }
  table.list > tbody > tr.selected > td {
    background-color: var(--fw-hiliter) !important;
  }
  table.list.table-dense > :not(caption) > * > * {
    padding: 0 1px !important;
    font-size: 0.7rem !important;
  }

  table.list.table-dense th.rotate {
    /* height to fit longest name */
    height: 140px;
    white-space: nowrap;
  }

  table.list.table-dense th.rotate > div {
    transform:
      translate(0px, -8px)
      /* 45 is really 360 - 45 */
      rotate(315deg);
    width: 30px;
  }
  table.list.table-dense th.rotate > div > span {
    border-bottom: 1px solid #ccc;
    padding: 5px 10px;
  }
/* ... */

